--- a/DeployServer.service
+++ b/DeployServer.service
@@ -5,6 +5,7 @@ After=network-online.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/python3 /home/sdlfly2000/Projects/Deployment/DeployServer.py
+WorkingDirectory=/home/sdlfly2000/Projects/Deployment/
 KillMode=process
 Restart=on-failure
 RestartSec=1min
